Fixed responsiveness on mobile view for the highscores, score card

--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ a {
 /* start quiz */
 
 .card {
-  width: 450px;
-  padding: 2.5rem 3rem;
+  width: 350px;
+  padding: 2.5rem 1.3rem;
   background-color: var(--white);
   box-shadow: 3px 3px 5px 4px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -237,14 +237,17 @@ a {
 }
 
 .score-card {
-  width: 500px;
+  width: 350px;
   display: none;
-  align-items: center;
-  justify-content: center;
   height: 100%;
   padding: 2rem 3rem;
-
   box-shadow: 3px 3px 5px 4px rgba(0, 0, 0, 0.1);
+}
+
+.score-card form {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
 }
 
 .score-card .container {
@@ -329,5 +332,19 @@ a {
 
   .question-wrapper p {
     padding: 00 1rem;
+  }
+
+  .card {
+    width: 450px;
+    padding: 2.5rem 3rem;
+  }
+
+  .score-card {
+    width: 500px;
+    display: none;
+    height: 100%;
+    padding: 2rem 3rem;
+
+    box-shadow: 3px 3px 5px 4px rgba(0, 0, 0, 0.1);
   }
 }
